<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="224dp"
        android:background="@color/light_green"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.profile.ProfileActivity">

            <ImageView
                android:id="@+id/gambar_profil"
                android:layout_width="116dp"
                android:layout_height="116dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/brand_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/nama_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@+id/gambar_profil"
                app:layout_constraintStart_toStartOf="@+id/gambar_profil"
                app:layout_constraintTop_toBottomOf="@+id/gambar_profil"
                tools:ignore="MissingConstraints" />

<!--            <TextView-->
<!--                android:id="@+id/email_user"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:text="@string/emailuser"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/nama_user"-->
<!--                app:layout_constraintStart_toStartOf="@+id/nama_user"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/nama_user" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="280dp"
        android:layout_height="224dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_pengaturan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.profile.ProfileActivity">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pengaturan"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/border_pengaturan_detail"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.profile.ProfileActivity">

                    <TextView
                        android:id="@+id/tv_ubahtema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/ubah_tampilan_tema"
                        android:textColor="@color/light_green"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/edit_tema"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_toggle_on_24"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_pengaturan_detail"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="14dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.profile.ProfileActivity">

                    <TextView
                        android:id="@+id/tv_ubahbahasa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/change_language"
                        android:textColor="@color/light_green"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/edit_bahasa"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.6"
                        app:srcCompat="@drawable/ic_baseline_language_24"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_pengaturan_detail"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.profile.ProfileActivity">

                    <TextView
                        android:id="@+id/tv_aturprofil"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/atur_profil"
                        android:textColor="@color/light_green"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/edit_profil"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_edit_24"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>